# gputop

./: configure.ac
gputop-client/: gputop.js
gputop-client-c/: Makefile.am  gputop-client-c.c  gputop-oa-counters.c  gputop-oa-counters.h  gputop-oa-metrics.h  gputop-util.h
gputop-data/: gputop.proto
gputop-server/: gputop-perf.c  gputop-perf.h  gputop-server.c
gputop-tracepoints/: gputop-tracepoints.js
gputop-ui/: .gitignore  Makefile.am  gputop-soup-network.c  gputop-soup-network.h  gputop-ui-main.cpp  gputop-ui-timeline.cpp  gputop-ui-topology.cpp  gputop-ui-topology.h  gputop-ui-utils.cpp  tracepoint_parser.c
gputop-ui/imgui/: imconfig.h  imgui_impl_gtk3_cogl.cpp
mesa/include/drm-uapi/: i915_drm.h
mesa/src/mesa/main/: hash.h
scripts/: gputop-oa-codegen.py
